<resources>

    //headers
    <string name="app_name">TimeToMeet</string>
    <string name="loginHeader">Safe Fast </string>
    <string name="loginHeader2"> Your choice </string>

    //images
    <string name="ttmlogo">ttmlogo</string>
    <string name="ttmInfo">ttmInfo</string>
    <string name="ttmLoginBg">ttmLoginBg</string>
    <string name="checkMark">check</string>

    //buttons
    <string name="newbooking">New Booking</string>
    <string name="viewbooking">View Booking</string>
    <string name="myProfile">My Profile</string>
    <string name="login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="confirmBooking">Confirm</string>

    //input values
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="organization_name">Organization name</string>
    <string name="organization_no">Organization number</string>
    <string name="zipcode">Zipcode</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="phone_number">Phone number</string>
    <string name="object_id">Object Id</string>
    <string name="object_type">Object Type</string>
    <string name="from_date">From (date)</string>
    <string name="to_date">To (date)</string>

    <string name="search_results">Search Results</string>

</resources>
