<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="417dp"
        android:layout_height="52dp"
        android:layout_marginBottom="1dp"
        android:background="#3C423B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/ttmlogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/ttmlogo"
            app:srcCompat="@drawable/ttmlogo" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="43dp"
            android:layout_height="52dp"
            android:layout_marginStart="185dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="29dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/ttmInfo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ttmlogo"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_info_details" />

    </TableRow>

    <Button
        android:id="@+id/login"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="226dp"
        android:layout_height="48dp"
        android:layout_marginTop="432dp"
        android:background="@drawable/button_background"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="@id/signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:layout_constraintVertical_bias="0.051" />

    <Button
        android:id="@+id/signUp"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="226dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/SignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:layout_constraintVertical_bias="0.923" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/loginBg"
        android:layout_width="465dp"
        android:layout_height="581dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/ttmLoginBg"
        android:tint="#E42B2E2A"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/loginbg" />

    <EditText
        android:id="@+id/Safe"
        android:layout_width="97dp"
        android:layout_height="88dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/safe"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:text="@string/safe"
        android:textColor="#787676"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/fast"
        android:layout_width="86dp"
        android:layout_height="61dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/fast"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:text="@string/fast"
        android:textColor="#787676"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/yourChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/yourChoice"
        android:layout_width="208dp"
        android:layout_height="75dp"
        android:layout_marginBottom="44dp"
        android:contentDescription="@string/yourChoice"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:text="@string/yourChoice"
        android:textColor="#787676"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/checkS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/checkMark"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/checkF"
        app:layout_constraintEnd_toStartOf="@+id/Safe"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="?android:attr/textCheckMark" />

    <ImageView
        android:id="@+id/checkF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/checkMark"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/yourChoice"
        app:layout_constraintEnd_toStartOf="@+id/fast"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="?android:attr/textCheckMark" />

    <ImageView
        android:id="@+id/checkYc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:contentDescription="@string/checkMark"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toStartOf="@+id/yourChoice"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkF"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="?android:attr/textCheckMark" />

</androidx.constraintlayout.widget.ConstraintLayout>