<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewBooking">

    <Button
        android:id="@+id/newBooking4"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="226dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/button_background"
        android:text="@string/confirmBooking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintVertical_bias="0.076" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="417dp"
        android:layout_height="52dp"
        android:layout_marginBottom="1dp"
        android:background="#3C423B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/ttmlogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/ttmlogo"
            app:srcCompat="@drawable/ttmlogo" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="43dp"
            android:layout_height="52dp"
            android:layout_marginStart="185dp"
            android:layout_marginLeft="185dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/ttmInfo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ttmlogo"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_info_details" />

    </TableRow>

    <ViewFlipper
        android:id="@+id/v_flipper"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/tableRow"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">
    </ViewFlipper>

</androidx.constraintlayout.widget.ConstraintLayout>