<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.conf_booking.MainMenu">


    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="417dp"
        android:layout_height="52dp"
        android:layout_marginBottom="1dp"
        android:background="#3C423B"
        android:paddingLeft="33dp"
        android:paddingTop="13dp"
        android:paddingRight="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/ttmlogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ttmlogo"
            app:srcCompat="@drawable/ttmlogo" />
    </TableRow>

    <ViewFlipper
        android:id="@+id/v_flipper"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/tableRow"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">
    </ViewFlipper>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="312dp"
        android:layout_height="44dp"
        android:background="@drawable/search_buttonbg"
        android:queryHint="Type to search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_flipper"
        app:layout_constraintVertical_bias="0.065" />

    <Button
        android:id="@+id/newBooking"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="226dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_background"
        android:text="@string/newbooking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintVertical_bias="0.172" />

    <Button
        android:id="@+id/viewBooking"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="226dp"
        android:layout_height="48dp"
        android:background="@drawable/button_background"
        android:text="@string/viewbooking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newBooking"
        app:layout_constraintVertical_bias="0.278" />

</androidx.constraintlayout.widget.ConstraintLayout>
